--- a/idnex.html
+++ b/idnex.html
@@ -8,7 +8,7 @@
     <!-- Flat UI necessary-->
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.bootcdn.net/ajax/libs/flat-ui/2.3.0/css/flat-ui.min.css" rel="stylesheet">
-    <link href="./css/niuini.css" rel="stylesheet">
+    <link href="https://unpkg.com/anqila-webgl-star@1.0.0/css/niuini.css" rel="stylesheet">
     
 
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
@@ -122,11 +122,6 @@
 
             </div>
         </div>
-        <!-- <hr style="position: absolute;"> -->
-
-
-
-
     </div>
     <div id="push"></div>
 </div>
@@ -135,39 +130,39 @@
 
     <script src="https://cdn.bootcdn.net/ajax/libs/flat-ui/2.3.0/js/flat-ui.min.js"></script>
 
-    <script src="js/layer.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/layer.js"></script>
 
-    <script src="./js/threejs/Three.js"></script>
-    <script src="./js/threejs/dat.gui_modify.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/Three.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/dat.gui_modify.js"></script>
 
-    <script src="./js/threejs/OrbitControls.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/OrbitControls.js"></script>
 
-    <script src="./js/threejs/mmdPlay/libs/mmdparser.min.js"></script>
-    <script src="./js/threejs/mmdPlay/libs/ammo.js"></script>
-    <script src="./js/threejs/mmdPlay/libs/Detector.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/libs/mmdparser.min.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/libs/ammo.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/libs/Detector.js"></script>
 
-    <script src="./js/threejs/mmdPlay/loaders/TGALoader.js"></script>
-    <script src="./js/threejs/mmdPlay/loaders/MMDLoader.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/loaders/TGALoader.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/loaders/MMDLoader.js"></script>
 
-    <script src="./js/threejs/mmdPlay/effects/OutlineEffect.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/effects/OutlineEffect.js"></script>
 
-    <script src="./js/threejs/mmdPlay/animation/CCDIKSolver.js"></script>
-    <script src="./js/threejs/mmdPlay/animation/MMDPhysics.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/animation/CCDIKSolver.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/animation/MMDPhysics.js"></script>
 
-    <script src="./js/threejs/mmdPlay/Mirror/Mirror.js"></script>
-    <script src="./js/threejs/mmdPlay/SkyShader/SkyShader.js"></script>
-    <script src="./js/threejs/mmdPlay/jq/jquery.mousewheel.min.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/Mirror/Mirror.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/SkyShader/SkyShader.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/mmdPlay/jq/jquery.mousewheel.min.js"></script>
 
-    <script src="./js/threejs/project/control.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/project/control.js"></script>
     <script>
         // var modelFile =    "http://file.niuini.com/model/10/Tda式 洛天依·三月雨常服.pmx";
-        // var modelFile = "./Bailu/白露1.0.pmx";
-        var  modelFile = "./heita/黑塔.pmx";
+        var modelFile = "./hutao/胡桃.pmx";
+        // var  modelFile = "./heita/黑塔.pmx";
         var motionFiles = ["http://file.niuini.com/motion/201904202121169044.vmd"];
         var cameraFiles = ["http://file.niuini.com/camera/201904202121539841.vmd"];
         var audioFile =    "http://file.niuini.com/audio/201904202132351044.mp3";
     </script>
-    <script src="./js/threejs/project/main.js"></script>
+    <script src="https://unpkg.com/anqila-webgl-star@1.0.0/js/threejs/project/main.js"></script>
     <!-- <script src="./js/threejs/main.js"></script> -->
 </body>
 
